syntax = "proto3";
package dadtkv;
option csharp_namespace = "Dadtkv";

import "ConsensusValueDto.proto";

message LearnRequestDto {
  uint64 serverId = 1;
  uint64 broadcasterId = 2;
  uint64 sequenceNum = 3;
  uint64 roundNumber = 4;
  ConsensusValueDto consensusValue = 5;
}