syntax = "proto3";
package dadtkv;

option csharp_namespace = "DADTKV";

import "DadInt.proto";

service StateUpdateService {
  rpc UpdateBroadcast(UpdateRequest) returns (UpdateResponse);
}

message UpdateRequest {
  uint64 serverId = 1;
  uint64 sequenceNum = 2;
  repeated dadtkv.DadInt writeSet = 3;
}

message UpdateResponse {
  bool ok = 1;
}
