syntax = "proto3";
package dadtkv;
option csharp_namespace = "Dadtkv";

import "LeaseIdDto.proto";

message LeaseRequestDto {
  uint64 serverId = 1;
  LeaseIdDto leaseId = 2;
  repeated string keys = 3;
}